# boolean_calculator

./: .gitignore  CMakeLists.txt  README.md  actions.py
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  CodeCoverage.cmake  Docs.cmake  LinkTimeOptimization.cmake  Linters.cmake  Sanitizers.cmake  Warnings.cmake
config/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
src/: CMakeLists.txt  algorithm.cpp  file_adaptor.cpp  meta.cpp  pcn.cpp
src/include/adaptor/: file_adaptor.h
src/include/urp/: algorithm.h  meta.h  pcn.h
test/: CMakeLists.txt  main_test.cpp  readme_tests.md
test/testcases/: test_algebra.cpp  test_cofactors.cpp  test_pcn.cpp  test_singular.cpp
tools/: .clang-tidy  actions_helper.py  cmakecache_reader.py  conantoolchain_reader.py  make_component.py
tools/templates/: header.hpp.jinja2  source.cpp.jinja2  test.cpp.jinja2
